looped over data with javascript

--- a/src/index.html
+++ b/src/index.html
@@ -221,159 +221,9 @@
 
     <!-- Cards grid -->
     <section
+      id="cards"
       class="flex flex-col mx-6 mt-4 sm:grid grid-cols-2 space-x-3 md:grid md:grid-cols-3 lg:grid lg:grid-cols-4"
-    >
-      <!-- card beginning -->
-      <div class="overflow-hidden shadow-lg rounded-md relative mb-3">
-        <div class="absolute right-4 top-4">
-          <i class="fa fa-heart" aria-hidden="true"></i>
-        </div>
-        <img
-          class="w-full"
-          src="https://images.unsplash.com/photo-1566371486490-560ded23b5e4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dmFjYXRpb258ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-          alt="Sunset in the mountains"
-        />
-        <div class="flex justify-between">
-          <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2">Tamarin, Mauritius</div>
-            <p class="text-gray-700 text-base">
-              62 km to Bras d'Eau National Park
-            </p>
-            <p>Apr 1-6</p>
-            <p class="mt-2"><span class="font-semibold">$171 night</span></p>
-          </div>
-          <div class="mt-5">
-            <i class="fa fa-star" aria-hidden="true"></i>4.71
-          </div>
-        </div>
-      </div>
-      <!-- card end -->
-      <!-- card beginning -->
-      <div class="overflow-hidden shadow-lg rounded-md relative mb-3">
-        <div class="absolute right-4 top-4">
-          <i class="fa fa-heart" aria-hidden="true"></i>
-        </div>
-        <img
-          class="w-full"
-          src="https://images.unsplash.com/photo-1566371486490-560ded23b5e4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dmFjYXRpb258ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-          alt="Sunset in the mountains"
-        />
-        <div class="flex justify-between">
-          <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2">Tamarin, Mauritius</div>
-            <p class="text-gray-700 text-base">
-              62 km to Bras d'Eau National Park
-            </p>
-            <p>Apr 1-6</p>
-            <p class="mt-2"><span class="font-semibold">$171 night</span></p>
-          </div>
-          <div class="mt-5">
-            <i class="fa fa-star" aria-hidden="true"></i>4.71
-          </div>
-        </div>
-      </div>
-      <!-- card end -->
-      <!-- card beginning -->
-      <div class="overflow-hidden shadow-lg rounded-md relative mb-3">
-        <div class="absolute right-4 top-4">
-          <i class="fa fa-heart" aria-hidden="true"></i>
-        </div>
-        <img
-          class="w-full"
-          src="https://images.unsplash.com/photo-1566371486490-560ded23b5e4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dmFjYXRpb258ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-          alt="Sunset in the mountains"
-        />
-        <div class="flex justify-between">
-          <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2">Tamarin, Mauritius</div>
-            <p class="text-gray-700 text-base">
-              62 km to Bras d'Eau National Park
-            </p>
-            <p>Apr 1-6</p>
-            <p class="mt-2"><span class="font-semibold">$171 night</span></p>
-          </div>
-          <div class="mt-5">
-            <i class="fa fa-star" aria-hidden="true"></i>4.71
-          </div>
-        </div>
-      </div>
-      <!-- card end -->
-      <!-- card beginning -->
-      <div class="overflow-hidden shadow-lg rounded-md relative mb-3">
-        <div class="absolute right-4 top-4">
-          <i class="fa fa-heart" aria-hidden="true"></i>
-        </div>
-        <img
-          class="w-full"
-          src="https://images.unsplash.com/photo-1566371486490-560ded23b5e4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dmFjYXRpb258ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-          alt="Sunset in the mountains"
-        />
-        <div class="flex justify-between">
-          <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2">Tamarin, Mauritius</div>
-            <p class="text-gray-700 text-base">
-              62 km to Bras d'Eau National Park
-            </p>
-            <p>Apr 1-6</p>
-            <p class="mt-2"><span class="font-semibold">$171 night</span></p>
-          </div>
-          <div class="mt-5">
-            <i class="fa fa-star" aria-hidden="true"></i>4.71
-          </div>
-        </div>
-      </div>
-      <!-- card end -->
-      <!-- card beginning -->
-      <div class="overflow-hidden shadow-lg rounded-md relative mb-3">
-        <div class="absolute right-4 top-4">
-          <i class="fa fa-heart" aria-hidden="true"></i>
-        </div>
-        <img
-          class="w-full"
-          src="https://images.unsplash.com/photo-1566371486490-560ded23b5e4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dmFjYXRpb258ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-          alt="Sunset in the mountains"
-        />
-        <div class="flex justify-between">
-          <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2">Tamarin, Mauritius</div>
-            <p class="text-gray-700 text-base">
-              62 km to Bras d'Eau National Park
-            </p>
-            <p>Apr 1-6</p>
-            <p class="mt-2"><span class="font-semibold">$171 night</span></p>
-          </div>
-          <div class="mt-5">
-            <i class="fa fa-star" aria-hidden="true"></i>4.71
-          </div>
-        </div>
-      </div>
-      <!-- card end -->
-      <!-- card beginning -->
-      <div class="overflow-hidden shadow-lg rounded-md relative mb-3">
-        <div class="absolute right-4 top-4">
-          <i class="fa fa-heart" aria-hidden="true"></i>
-        </div>
-        <img
-          class="w-full"
-          src="https://images.unsplash.com/photo-1566371486490-560ded23b5e4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dmFjYXRpb258ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60"
-          alt="Sunset in the mountains"
-        />
-        <div class="flex justify-between">
-          <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2">Tamarin, Mauritius</div>
-            <p class="text-gray-700 text-base">
-              62 km to Bras d'Eau National Park
-            </p>
-            <p>Apr 1-6</p>
-            <p class="mt-2"><span class="font-semibold">$171 night</span></p>
-          </div>
-          <div class="mt-5">
-            <i class="fa fa-star" aria-hidden="true"></i>4.71
-          </div>
-        </div>
-      </div>
-      <!-- card end -->
-    </section>
+    ></section>
 
     <section
       class="flex justify-center items-center mb-5 fixed bottom-5 left-[40%] md:left-[45%]"
@@ -382,5 +232,7 @@
         Map <i class="fa fa-map" aria-hidden="true"></i>
       </button>
     </section>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
