--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vacation Homes & Condo Rentals - Airbnb - Airbnb</title>
-    <link rel="stylesheet" href="../dist/output.css" />
+    <link rel="stylesheet" href="./output.css" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <link
       rel="stylesheet"
