--- a/src/index.html
+++ b/src/index.html
@@ -72,10 +72,10 @@
 
         <div class="mr-3 flex space-x-2 justify-center items-center">
           <button
-            class="bg-[#333] text-white font-bold py-3 px-5 rounded-full flex space-x-2 justify-center items-center"
+            class="bg-[#ddd] border-2 border-gray-400 text-[#000] font-bold py-3 px-5 rounded-full flex space-x-2 justify-center items-center"
           >
-            <p><i class="fa fa-bars" aria-hidden="true"></i></p>
-            <p><i class="fa fa-user" aria-hidden="true"></i></p>
+            <p><i class="fa fa-bars fa-2x" aria-hidden="true"></i></p>
+            <p><i class="fa fa-user-circle fa-2x" aria-hidden="true"></i></p>
           </button>
         </div>
       </section>
